# win-utils-autostart

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
headers/win-utils-autostart/: win_utils_autostart.h
src/: win_utils_autostart.cpp
src/internal/: elevation_helpers.cpp  elevation_helpers.h  registry_helpers.cpp  registry_helpers.h
tests/: CMakeLists.txt
tests/test/: CMakeLists.txt  test_autostart.cpp  test_registry.cpp  test_service_query.cpp
